housie-tambola/src/components/Ticket/Ticket.module.css
/* .outerBorder {
    width: 474px;
    height: 156px;
    border: 3px solid white;
    border-radius: 16px;
    justify-self: center;
    text-align: center;
    font-size: 1.7rem;
    margin-top: 20px;
    overflow: hidden;
} */
.outerBorder {
    width: 450px;
    height: 150px;
    border: 3px solid white;
    display: flex;
    flex-direction: column;
    border-radius: 16px;
    overflow: hidden;
    align-self: center;
    justify-self: center;
}

.firstRow,
.secondRow,
.thirdRow {
    width: 100%;
    height: 100%;
    display: flex;
}

.firstRow,
.secondRow {
    border-bottom: 3px solid white;
}

.numberBox {
    width: 100%;
    height: 100%;
    border-right: 3px solid white;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.firstRow :last-child,
.secondRow :last-child,
.thirdRow :last-child {
    border: none;
}



@media screen and (max-width: 500px) {
    .outerBorder {
        width: 150px;
        height: 450px;
        flex-direction: row;
        margin-top: 10%;
    }

    .firstRow,
    .secondRow {
        border: none;
        border-right: 3px solid white;
    }

    .numberBox {
        border: none;
        border-bottom: 3px solid white;
    }

    .firstRow,
    .secondRow,
    .thirdRow {
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
    }

}


/* .firstRow,
.secondRow {
    border-bottom: 3px solid white;
}

.row {
    height: 50px;
    width: 100%;
    display: flex;
}

.numberBox {
    border-right: 3px solid white;
    width: 50px;
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;

}

.firstRow>div:nth-child(9) {
    border: none;
}

.secondRow>div:nth-child(9) {
    border: none;
}

.thirdRow>div:nth-child(9) {
    border: none;
}

.firstRow>div,
.secondRow>div,
.thirdRow>div {
    cursor: pointer;
}

@media screen and (max-width: 450px) {
    .outerBorder {
        height: 474px;
        width: 156px;
    }

    .row {
        height: 50px;
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    .numberBox {
        border-right: 1px solid white;
        width: 30px;
        height: 30px;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;

    }
} */

